--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <!doctype html>
 <html>
   <head>
-    <link rel="stylesheet/less" type="text/css" href="/less/main.less">
-    <link rel="shortcut icon" href="/favicon.ico">
-    <script src="/js/less.js" type="text/javascript"></script>
+    <link rel="stylesheet/less" type="text/css" href="/lesscss.org/less/main.less">
+    <link rel="shortcut icon" href="/lesscss.org/favicon.ico">
+    <script src="/lesscss.org/js/less.js" type="text/javascript"></script>
     <link href='http://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
-    <link rel="alternate" type="application/atom+xml" title="app - feed" href="/index.xml" />
+    <link rel="alternate" type="application/atom+xml" title="app - feed" href="/lesscss.org/index.xml" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>LESS &laquo; The Dynamic Stylesheet language</title>
     <script type="text/javascript">
