--- a/index.html
+++ b/index.html
@@ -81,25 +81,24 @@
   <div class="content">
     <section id="intro">
       <div id="logo"></div>
-      <h2>The <span>dynamic</span> stylesheet <span>language</span>.</h2>
+      <h2>El <span>lenguaje</span> dinámico <span>de hojas de estilo</span>.</h2>
       <h3>
-        LESS extends CSS with dynamic behavior such as <span>variables</span>, <span>mixins</span>,
-        <span>operations</span> and <span>functions</span>.
+        LESS amplía CSS añadiendo comportamiento dinámico como por ejemplo <span>variables</span>, <span><em>mixins</em></span>,
+        <span>operaciones</span> y <span>funciones</span>.
       </h3>
       <h3>
-        LESS runs on both the server-side
-        (with <span>Node.js</span> and <span>Rhino</span>) or <span>client-side</span> (modern browsers only).
+        LESS puede ejecutarse tanto en el lado del servidor (usando <span>Node.js</span> y <span>Rhino</span>) como <span>del lado del cliente</span> (únicamente en navegadores modernos).
       </h3>
       <a id="download" href="https://raw.github.com/less/less.js/master/dist/less-1.4.1.min.js">
         <img src="/images/download-button.png" />
       </a><div id="download-info">
       <div>version <code>1.4.1</code></div>
-      <div><a href="https://github.com/less/less.js/blob/master/CHANGELOG.md">changelog</a></div>
+      <div><a href="https://github.com/less/less.js/blob/master/CHANGELOG.md">registro de cambios</a></div>
     </div>
     </section>
 
     <section id="example">
-      <p>Write some LESS:</p>
+      <p>Escribiendo código LESS:</p>
 
 <pre><code>@base: #f938ab;
 
@@ -118,7 +117,7 @@
 }
 </code></pre>
 
-      <p>Compile to CSS:</p>
+      <p>Compilar a CSS:</p>
 
 <pre><code>npm install -g less
 lessc styles.less styles.css
@@ -132,28 +131,28 @@ lessc styles.less styles.css
 <section id="menu">
   <div class="content">
     <nav>
-      <a href="#synopsis">overview</a>
-      <a href="#usage">usage</a>
-      <a href="#docs" id="guide-link">language</a>
-      <a href="#reference" id="guide-link">function reference</a>
-      <a href="https://github.com/less/less.js">source</a>
-      <a href="#about">about</a>
-      <a href="http://less2css.org/" target="_blank">try it now!</a>
+      <a href="#synopsis">resumen</a>
+      <a href="#usage">uso</a>
+      <a href="#docs" id="guide-link">lenguaje</a>
+      <a href="#reference" id="guide-link">referencia</a>
+      <a href="https://github.com/less/less.js">fuente</a>
+      <a href="#about">acerca de</a>
+      <a href="http://less2css.org/" target="_blank">¡Pruébalo ahora!</a>
     </nav>
-    <a href="https://twitter.com/cloudhead" class="twitter-follow-button" data-show-screen-name="false" data-width="80px" data-show-count="false" data-lang="en">Follow on twitter</a>
+    <a href="https://twitter.com/cloudhead" class="twitter-follow-button" data-show-screen-name="false" data-width="80px" data-show-count="false" data-lang="en">Seguir en twitter</a>
     <div id="dropdown">
       <ul>
         <li><a href="#-variables">Variables</a></li>
         <li><a href="#-mixins">Mixins</a></li>
-        <li><a href="#-parametric-mixins">Parametric Mixins</a></li>
-        <li><a href="#-pattern-matching-and-guard-expressions">Pattern-matching</a></li>
-        <li><a href="#-nested-rules">Nested Rules</a></li>
-        <li><a href="#-operations">Operations</a></li>
-        <li><a href="#-functions">Functions</a></li>
-        <li><a href="#-namespaces">Namespaces</a></li>
-        <li><a href="#-scope">Scope</a></li>
-        <li><a href="#-comments">Comments</a></li>
-        <li><a href="#-importing">Importing</a></li>
+        <li><a href="#-parametric-mixins">Mixins paramétricos</a></li>
+        <li><a href="#-pattern-matching-and-guard-expressions">Patrones</a></li>
+        <li><a href="#-nested-rules">Reglas anidadas</a></li>
+        <li><a href="#-operations">Operaciones</a></li>
+        <li><a href="#-functions">Funciones</a></li>
+        <li><a href="#-namespaces">Espacio de nombres</a></li>
+        <li><a href="#-scope">Ámbito</a></li>
+        <li><a href="#-comments">Comentarios</a></li>
+        <li><a href="#-importing">Importación</a></li>
       </ul>
     </div>
   </div>
@@ -163,33 +162,32 @@ lessc styles.less styles.css
   <div class="content">
     <h2>1.4.0</h2>
 
-<p>We have released 1.4.0. This includes new features such as extends, the data-uri function and more maths functions. See the <a href="https://github.com/cloudhead/less.js/blob/master/CHANGELOG.md">changelog</a> for a full list of changes.</p>
+<p>Hemos lanzado la vesión 1.4.0. Esta versión incluye nuevas características tales como herencia, la función data-uri y muchas más funciones matemáticas. Visita el <a href="https://github.com/cloudhead/less.js/blob/master/CHANGELOG.md">registro de cambios</a> para consultar la lista completa de cambios.</p>
 
-<p>There are some known <span class="warning">breaking changes</span>.</p>
+<p>Alguno de ellos son <span class="warning">cambios de último mminuto</span>.</p>
 
-<p><code>@import-once</code> is removed and is now default behaviour for <code>@import</code>.</p>
+<p><code>@import-once</code> es eliminado y es ahora el comportamiento por defecto para <code>@import</code>.</p>
 
-<p><code>(~".myclass_@{index}") { ...</code> selector interpolation is deprecated, do this instead <code>.myclass_@{index} { ...</code>. This works in 1.3.1 onwards.</p>
+<p><code>(~".myclass_@{index}") { ...</code> el selector de interpolación cae en desuso (<em>deprectaed</em>), se recomienda hacer <code>.myclass_@{index} { ...</code>. Funciona a partir de la versión 1.3.1.</p>
 
-<p>The browser version no longer bundles a version of es5-shim.js - the version we previously used was inaccurate and the new version is significantly larger. Please include your choice of es-5 shim or only use on modern browsers.</p>
+<p>Las versiones de los navegadores que ya no usen una versión de es5-shim.js - la versión que usábamos anteriormente era incorrecta y la nueva versión es significativamente más grande. Por favor incluye tu elección de es-5 shim o usa únicamente navegadores modernos.</p>
 
-<p>We have introduced a optional strictMath mode, where math is required to be in parenthesis, e.g.</p>
+<p>Hemos introducido un modo opcional strictMath, donde los paréntesis son necesarios para realizar operaciones matemáticas, por ejemplo</p>
 
 <pre><code>(1 + 1)  // 2
 1 + 1    // 1+1
 </code></pre>
 
-<p>In 1.4.0 this option is turned off, but we intend to turn this on by default. We recommend you upgrade code and switch on the option (&ndash;strict-math=on in the command line or strictMath: true in JavaScript). Code written with brackets is backwards compatible with older versions of the less compiler.</p>
+<p>En la versión 1.4.0 esta opción está deshabilitada, pero tenemos pensado habilitarla por defecto. Te recomendamos que actualices tu código y habilites esta opción (&ndash;strict-math=on en línea de comando o strictMath: true en JavaScript). El código escrito entre paréntesis es compatible con versiones anteriores del compilador less.</p>
 
-<p>We also added a strict units option (strictUnits: true or strict-units=on) and this causes lessc to validate the units used are valid (e.g. 4px/2px = 2, not 2px and 4em/2px throws an error). There are no longer any plans to switch this option on permanently, but some users will find it useful for bug finding.</p>
+<p>Tambien hemos añadido una opción para el uso estricto de unidades (strictUnits: true o strict-units=on) la que obliga al compilador de less a valildar que las unidades usadas sean correctas (por ejemplo 4px/2px = 2, en cambio 2px y 4em/2px producirán un error). No hay planes para habilitar esta opción por defecto permanentemente, pero algunos usuarios lo encontraran útil para la detección de <em>bugs</em>.</p>
 
 <p>Unit maths is done, so <code>(4px * 3em) / 4px</code> used to equal <code>3px</code> and it now equals <code>3em</code>. However we do not cancel units down to unitless numbers unless strict units is on.
 The selector interpolation, maths and units changes can be made to your less now and will compile fine with less 1.3.3.</p>
 
 <h2>Variables</h2>
 
-<p>Variables allow you to specify widely used values in a single place, and then re-use them throughout the style sheet,
-making global changes as easy as changing one line of code.</p>
+<p>Las variables permiten especificar valores que van a ser utilizados en un único lugar, y además poder reusarlas por toda la hoja de estilo, pudiendo realizar cambios globales modificando una única línea de código.</p>
 
 <table class="code-example" cellpadding="0">
   <tr><td>
@@ -205,7 +203,7 @@ h2 {
   color: @color;
 }</code></pre>
   </td><td>
-  <pre class="css-output"><code>/* Compiled CSS */
+  <pre class="css-output"><code>/* CSS compilado */
 
 #header {
   color: #4D926F;
@@ -217,12 +215,9 @@ h2 {
 </table>
 
 
-<h2>Mixins</h2>
+<h2><em>Mixins</em></h2>
 
-<p>Mixins allow you to embed all the properties of a class into another class by
-simply including the class name as one of its properties. It&rsquo;s just like variables,
-but for whole classes. Mixins can also behave like functions, and take arguments,
-as seen in the example below.</p>
+<p>Los Mixins permiten incluir todas las propiedades de una clase en otra clase simplemente añadiendo el nombre de clase como una propiedad más. El comportamiento es similar al de las variables pero con clases enteras. Los <em>mixins</em> pueden comportarse tambien como fuciones, y tomar argumentos, como vemos en el siguiente ejemplo.</p>
 
 <table class="code-example" cellpadding="0">
   <tr><td>
