Translating index.html

--- a/index.html
+++ b/index.html
@@ -861,7 +861,7 @@ but if we call it with <em>two</em> arguments, we will get the second definition
 
 <p>Los centinelas son usado cuando quieres coincidencias por <em>expresiones</em>, al contrario que por valores simple o por aridad. Si estás familirarizado con la progrmaación funcional, lo habrás estudiado ya.</p>
 
-<p>Para no alejarse de la naturaleza declarativa de CSS, LESS opta por implementar las ejecuciones condicionales usando <stron><em>mixins<em> centinelas</strong> en vez de sentencias if/else, al igual que ocure con la opción <code>@media</code>.</p>
+<p>Para no alejarse de la naturaleza declarativa de CSS, LESS opta por implementar las ejecuciones condicionales usando <strong><em>mixins</em> centinelas</strong> en vez de sentencias if/else, al igual que ocure con la opción <code>@media</code>.</p>
 
 <p>Vamos a ver un ejemplo:</p>
 
