--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href='http://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
     <link rel="alternate" type="application/atom+xml" title="app - feed" href="/lesscss.org/index.xml" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <title>LESS &laquo; The Dynamic Stylesheet language</title>
+    <title>LESS &laquo; El lenguaje dinámico de hojas de estilo</title>
     <script type="text/javascript">
       (function () {
         if (/Microsoft/.test(navigator.appName)) { return }
@@ -3679,7 +3679,7 @@ contrast(hsl(90, 100%, 50%),#000000,#ffffff,60%);
            src="http://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png"
            alt="Fork me on GitHub" />
     </a>
-    <script src="/lesscss.org/js/hiless.js"></script>
+    <script src="js/hiless.js"></script>
   </body>
 </html>
 
