Fixed hiless.js src

--- a/index.html
+++ b/index.html
@@ -3679,7 +3679,7 @@ contrast(hsl(90, 100%, 50%),#000000,#ffffff,60%);
            src="http://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png"
            alt="Fork me on GitHub" />
     </a>
-    <script src="js/hiless.js"></script>
+    <script src="/lesscss.org/js/hiless.js"></script>
   </body>
 </html>
 
