--- a/index.html
+++ b/index.html
@@ -83,11 +83,10 @@
       <div id="logo"></div>
       <h2>El <span>lenguaje</span> dinámico <span>de hojas de estilo</span>.</h2>
       <h3>
-        LESS amplía CSS añadiendo comportamiento dinámico, como por ejemplo <span>variables</span>, <span>mixins</span>,
-        <span>operaciones</span> y <span>funciones</span>.
+        LESS añade comportamiento dinámico a CSS, por ejemplo <span>variables</span>, <span>mixins</span>, <span>operaciones</span> y <span>funciones</span>.
       </h3>
       <h3>
-        LESS puede ejecutarse tanto del lado del servidor (usando <span>Node.js</span> y <span>Rhino</span>) como <span>del lado del cliente</span> (únicamente en navegadores modernos).
+        LESS puede ejecutarse del lado del servidor (usando <span>Node.js</span> y <span>Rhino</span>) o <span>del lado del cliente</span> (en navegadores modernos).
       </h3>
       <a id="download" href="https://raw.github.com/less/less.js/master/dist/less-1.4.1.min.js">
         <img src="/lesscss.org//images/download-button.png" />
@@ -860,7 +859,7 @@ pre { .wrap }
 
 <p>Las expresiones condicionadas se usan cuando quieres invocar un mixins cuando cumple una condición determinada, en vez del valor de algún parámetro o la aridad. Si estás familiarizado con la programación funcional, ya conocerás como funcionan.</p>
 
-<p>Para no alejarse de la naturaleza declarativa de CSS, LESS opta por implementar las ejecuciones condicionales usando <stron><em>mixins<em> condicionados</strong> en vez de sentencias if/else, al igual que ocure con la opción <code>@media</code>.</p>
+<p>Para no alejarse de la naturaleza declarativa de CSS, LESS opta por implementar las ejecuciones condicionales usando <stron><em>mixins</em> condicionados</strong> en vez de sentencias if/else, al igual que ocure con la opción <code>@media</code>.</p>
 
 <p>Vamos a ver un ejemplo:</p>
 
