--- a/index.html
+++ b/index.html
@@ -3554,7 +3554,7 @@ contrast(hsl(90, 100%, 50%),#000000,#ffffff,60%);
 
 <h3>negation</h3>
 
-<p>Tiene el efecto opuesto a <code>difference</code>. El resultado es un color más brillante. <strong>Nota</strong>: El efecto <em>opuesto</em> no significa el efecto <em>contrario</em> al resultado a una operación de <em>adición<em>.</p>
+<p>Tiene el efecto opuesto a <code>difference</code>. El resultado es un color más brillante. <strong>Nota</strong>: El efecto <em>opuesto</em> no significa el efecto <em>contrario</em> al resultado a una operación de <em>adición</em>.</p>
 
 <p>Parámetros:</p>
 
