--- a/index.html
+++ b/index.html
@@ -140,15 +140,15 @@ lessc styles.less styles.css
       <ul>
         <li><a href="#-variables">Variables</a></li>
         <li><a href="#-mixins">Mixins</a></li>
-        <li><a href="#-parametric-mixins">Mixins paramétricos</a></li>
-        <li><a href="#-pattern-matching-and-guard-expressions">Patrones</a></li>
-        <li><a href="#-nested-rules">Reglas anidadas</a></li>
-        <li><a href="#-operations">Operaciones</a></li>
-        <li><a href="#-functions">Funciones</a></li>
-        <li><a href="#-namespaces">Espacio de nombres</a></li>
-        <li><a href="#-scope">Ámbito</a></li>
-        <li><a href="#-comments">Comentarios</a></li>
-        <li><a href="#-importing">Importación</a></li>
+        <li><a href="#-mixins-paramétricos">Mixins paramétricos</a></li>
+        <li><a href="#-patrones">Patrones</a></li>
+        <li><a href="#-reglas-anidadas">Reglas anidadas</a></li>
+        <li><a href="#-operaciones">Operaciones</a></li>
+        <li><a href="#-funciones">Funciones</a></li>
+        <li><a href="#-espacio-de-nombres">Espacio de nombres</a></li>
+        <li><a href="#-ámbito">Ámbito</a></li>
+        <li><a href="#-comentarios">Comentarios</a></li>
+        <li><a href="#-importación">Importación</a></li>
       </ul>
     </div>
   </div>
