--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ lessc styles.less styles.css
         <li><a href="#-variables">Variables</a></li>
         <li><a href="#-mixins">Mixins</a></li>
         <li><a href="#-mixins-paramétricos">Mixins paramétricos</a></li>
-        <li><a href="#-patrones">Patrones</a></li>
+        <li><a href="#-patrones-y-expresiones-condicionadas">Patrones y expresiones condicionadas</a></li>
         <li><a href="#-reglas-anidadas">Reglas anidadas</a></li>
         <li><a href="#-operaciones">Operaciones</a></li>
         <li><a href="#-funciones">Funciones</a></li>
@@ -956,7 +956,7 @@ pre { .wrap }
 <pre><code>.mixin (@b) when not (@b &gt; 0) { ... }
 </code></pre>
 
-<h2>Reglas internas</h2>
+<h2>Reglas anidadas</h2>
 
 <p>LESS te permite <em>anidar</Em> en vez de usar la cascada, aunque también es posible combinar ambos mecanismos. Supongamos que tenemos la siguiente hoja CSS:</p>
 
