--- a/index.html
+++ b/index.html
@@ -82,12 +82,15 @@
       <div id="logo"></div>
       <h2>El <span>lenguaje</span> dinámico <span>de hojas de estilo</span>.</h2>
       <h3>
-        LESS añade comportamiento dinámico a CSS, por ejemplo <span>variables</span>, <span>mixins</span>, <span>operaciones</span> y <span>funciones</span>. LESS puede ejecutarse del lado del servidor (usando <span>Node.js</span> y <span>Rhino</span>) o <span>del lado del cliente</span> (en navegadores modernos).
+        LESS añade comportamiento dinámico a CSS, por ejemplo <span>variables</span>, <span>mixins</span>, <span>operaciones</span> y <span>funciones</span>.
       </h3>
-      <a id="download" href="https://raw.github.com/less/less.js/master/dist/less-1.4.1.min.js">
-        <img src="/lesscss.org//images/download-button.png" />
+      <h3>
+        LESS puede ejecutarse del lado del servidor (usando <span>Node.js</span> y <span>Rhino</span>) o <span>del lado del cliente</span> (en navegadores modernos).
+      </h3>
+      <a id="download" href="https://raw.github.com/less/less.js/master/dist/less-1.5.0.min.js">
+        <img src="/images/download-button.png" />
       </a><div id="download-info">
-      <div>versión <code>1.4.1</code></div>
+      <div>version <code>1.5.0</code></div>
       <div><a href="https://github.com/less/less.js/blob/master/CHANGELOG.md">registro de cambios</a></div>
     </div>
     </section>
@@ -134,7 +137,6 @@ lessc styles.less styles.css
       <a href="#about">acerca de</a>
       <a href="http://less2css.org/" target="_blank">¡Pruébalo ahora!</a>
     </nav>
-    <a href="https://twitter.com/cloudhead" class="twitter-follow-button" data-show-screen-name="false" data-width="80px" data-show-count="false" data-lang="en">Seguir en twitter</a>
     <div id="dropdown">
       <ul>
         <li><a href="#-variables">Variables</a></li>
