--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         LESS puede ejecutarse del lado del servidor (usando <span>Node.js</span> y <span>Rhino</span>) o <span>del lado del cliente</span> (en navegadores modernos).
       </h3>
       <a id="download" href="https://raw.github.com/less/less.js/master/dist/less-1.5.0.min.js">
-        <img src="/images/download-button.png" />
+        <img src="/lesscss.org//images/download-button.png" />
       </a><div id="download-info">
       <div>version <code>1.5.0</code></div>
       <div><a href="https://github.com/less/less.js/blob/master/CHANGELOG.md">registro de cambios</a></div>
