--- a/index.html
+++ b/index.html
@@ -3611,6 +3611,134 @@ contrast(hsl(90, 100%, 50%),#000000,#ffffff,60%);
   </div>
 </section>
 
+<section id="changes" class="page page-dark">
+  <h1>Changes</h1>
+  <div class="content">
+    <h2>1.5.0</h2>
+
+<p>Under the hood less changed quite a bit (e.g. nodes no longer have a toCSS function), but we haven&rsquo;t made any breaking changes to the language. These are highlights, so please see the <a href="https://github.com/less/less.js/blob/master/CHANGELOG.md">changelog</a> for a full list of changes.</p>
+
+<p>In usage, we do no longer support the yui-compress option due to a bug in ycssmin which was not getting fixed. We have switched to clean-css. If you use this option it will use clean-css and output a warning. The new option is called &ndash;clean-css.</p>
+
+<p>We now have sourcemap support, meaning you can compile your less and then use developer tools to see where in your less file a particular piece of css comes from. You can enable this with the &ndash;source-map=filename option. There are other options, help is available if you run lessc without arguments. For instance, if you use the &ndash;source-map-less-inline &ndash;source-map-map-inline options then your sourcemap and all less files will be embedded into your generated css file.</p>
+
+<p>You can now import your css files into the output by doing</p>
+
+<pre><code>@import (inline) "file.css";
+</code></pre>
+
+<p>This will not make selectors available to your less, it will just blindly copy that file into the output. It will not be compressed unless you use the clean-css option.</p>
+
+<p>We have another import option - reference. This means that any variables or mixins or selectors will be imported, but never output.</p>
+
+<p>e.g. if you have</p>
+
+<pre><code>.a {
+  color: green;
+}
+</code></pre>
+
+<p>in a file and import it</p>
+
+<pre><code>@import (reference) "file.less";
+</code></pre>
+
+<p>then that file will not be output, but you could do</p>
+
+<pre><code>.b {
+  .a;
+}
+</code></pre>
+
+<p>and color: green; would be output inside the .b selector only. This also works with extends, so you can use extends to bring complex selector groups from a less or css file into your main file. One use-case might be to grab a set of selectors from bootstrap without including the whole library.</p>
+
+<p>We now have property merging, meaning you can do this</p>
+
+<pre><code>.a() {
+  transform+: rotateX(30deg);
+}
+.b {
+  transform+: rotateY(20deg);
+  .a();
+}
+</code></pre>
+
+<p>and you will get</p>
+
+<pre><code>.b {
+  transform: rotateY(20deg), rotateX(30deg);
+}
+</code></pre>
+
+<p>Note: although convention is to space seperate we believe all browsers support comma seperated for transform and other properties where this is useful are comma seperated, so the feature always comma seperates joined values.</p>
+
+<p>And lastly.. you can now put guards on css selectors. so instead of doing this</p>
+
+<pre><code>.a() when (@ie8 = true) {
+   color: black;
+}
+.a {
+   .a;
+}
+</code></pre>
+
+<p>you can do this</p>
+
+<pre><code>.a when (@ie8 = true) {
+    color: black;
+}
+</code></pre>
+
+<p>which does the same thing. Note: this doesn&rsquo;t work with multiple selectors because of ambiguities between the guard syntax and css.</p>
+
+<p>You may also use &amp; on its own to enclose multiple selectors e.g. instead of</p>
+
+<pre><code>.ie8() when (@ie8 = true) {
+   .b {
+     color: white;
+   }
+   // .. etc
+}
+.ie8();
+</code></pre>
+
+<p>you can write.</p>
+
+<pre><code>&amp; when (@ie8 = true) {
+   .b {
+     color: white;
+   }
+   // .. etc
+}
+</code></pre>
+
+<h2>1.4.0</h2>
+
+<p>La versión 1.4.0 ha sido lanzada. Esta versión incluye nuevas características tales como la herencia, la función data-uri y muchas más funciones matemáticas. Visita el <a href="https://github.com/cloudhead/less.js/blob/master/CHANGELOG.md">registro de cambios</a> para consultar la lista completa de cambios.</p>
+
+<p>Alguno de ellos son conocidos como <span class="warning">cambios de ruptura</span>.</p>
+
+<p><code>@import-once</code> ha sido eliminado y ahora es el comportamiento por defecto para <code>@import</code>.</p>
+
+<p><code>(~".myclass_@{index}") { ...</code> el selector de interpolación cae en desuso (<em>deprectaed</em>), se recomienda usar en su lugar <code>.myclass_@{index} { ...</code>. Funciona a partir de la versión 1.3.1.</p>
+
+<p>Las versiones de los navegadores que ya no usen una versión de es5-shim.js - la versión que se usaba anteriormente era imprecisa y la nueva versión es significativamente más grande. Por favor incluye es-5 shim o usa únicamente navegadores modernos.</p>
+
+<p>Se ha introducido un modo opcional denominado strictMath, donde los paréntesis son necesarios para realizar operaciones matemáticas, por ejemplo</p>
+
+<pre><code>(1 + 1)  // 2
+1 + 1    // 1+1
+</code></pre>
+
+<p>En la versión 1.4.0 esta opción está deshabilitada, pero estará habillitada por defecto en el futuro. Se recomienda que actualices tu código y habilites esta opción (&ndash;strict-math=on en línea de comando o strictMath: true en JavaScript). El código escrito entre paréntesis es compatible con versiones anteriores del compilador less.</p>
+
+<p>Tambien hemos añadido una opción para el uso estricto de unidades (strictUnits: true o strict-units=on) la cual obliga al compilador de less a valildar que las unidades usadas sean correctas (por ejemplo 4px/2px = 2, en cambio 2px y 4em/2px producirán un error). No hay planes para habilitar esta opción por defecto permanentemente, pero algunos usuarios lo encontraran útil para la detección de <em>errores</em>.</p>
+
+<p>Las unidades matemáticas están terminadas, <code>(<span class="number">4px</span> * <span class="number">3em</span>) / <span class="number">4px</span></code> solía ser igual a <code><span class="number">3em</span></code> y ahora es igual a <code><span class="number">3px</span></code>. No obstante, no se usarán números sin unidades a menos que el modo estricto esté activado.
+El selector interpolación y los cambios en las funciones matemáticas y en las unidades compilarán correctamente en less 1.3.3.</p>
+  </div>
+</section>
+
 <section id="translations" class="page page-dark">
   <div class="content">
     <h1>En otros idiomas</h1>
